netty debug message ignore